--- a/common.conf
+++ b/common.conf
@@ -67,6 +67,7 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 	# The following are settings for executing AHEAD     #
 	######################################################
 	AHEAD_sub_begin
+	# Allow to externally set the AHEAD_DATE variable!
 	[[ -z ${AHEAD_DATE+x} ]] && export AHEAD_DATE="$(date '+%Y-%m-%d_%H-%M')"
 	if which systemd-detect-virt &>/dev/null ; then
 		systemd-detect-virt &>/dev/null && export AHEAD_IS_VM=1 || export AHEAD_IS_VM=0
@@ -82,8 +83,9 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 	export AHEAD_USE_PCM=$((AHEAD_IS_VM == 1 ? 0 : 1))
 	export AHEAD_DB_PATH="${SOURCE_DIR_COMMON}/database"
 	export AHEAD_SCALEFACTOR_PREFIX="sf-"
-	export AHEAD_SCALEFACTOR_MIN="1"
-	export AHEAD_SCALEFACTOR_MAX="1"
+	### The following must be overwritable for the minbfw experiments
+	[[ -z ${AHEAD_SCALEFACTOR_MIN+x} ]] && export AHEAD_SCALEFACTOR_MIN="1"
+	[[ -z ${AHEAD_SCALEFACTOR_MAX+x} ]] && export AHEAD_SCALEFACTOR_MAX="10"
 
 	export AHEAD_BUILD_BASE_DIR="${SOURCE_DIR_COMMON}/build"
 	export AHEAD_BUILD_DEBUG_DIR="${AHEAD_BUILD_BASE_DIR}/Debug"
@@ -98,17 +100,24 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 	export AHEAD_MINBFW_SUFFIX="-minbfw"
 	export AHEAD_MINBFW_SCALEFACTOR="1"
 	export AHEAD_MINBFW_MIN="1"
-	export AHEAD_MINBFW_MAX="3"
+	export AHEAD_MINBFW_MAX="4"
 	export AHEAD_MINBFW_CMDARG="--AN-minbfw"
-
-	# WARNING: If you want to change the following, make sure to change the respective occurrences throughout this project, e.g. in the CMakeLists.txt files
-	export AHEAD_RESTINY32_SUFFIX="_restiny32"
 
 	export AHEAD_PAPER_PATH="${SOURCE_DIR_COMMON}/paper"
 	export AHEAD_PAPER_RESULTS="${AHEAD_PAPER_PATH}/results"
 	export AHEAD_PAPER_RESULTS_SSB="${AHEAD_PAPER_RESULTS}/ssb"
 	export AHEAD_PAPER_RESULTS_MB="${AHEAD_PAPER_RESULTS}/microbenchmarks"
 	export AHEAD_PAPER_RESULTS_MI="${AHEAD_PAPER_RESULTS}/microbenchmarks/ext_euclidean"
+
+	export PATH_MINBFW_RUNTIME_BASENAME="minbfw_runtime"
+	export PATH_MINBFW_RUNTIME_GNUPLOTFILE="${AHEAD_PAPER_RESULTS_SSB}/${PATH_MINBFW_RUNTIME_BASENAME}.m"
+	export PATH_MINBFW_RUNTIME_DATAFILE="${AHEAD_PAPER_RESULTS_SSB}/${PATH_MINBFW_RUNTIME_BASENAME}.data"
+	export PATH_MINBFW_CONSUMPTION_BASENAME="minbfw_consumption"
+	export PATH_MINBFW_CONSUMPTION_GNUPLOTFILE="${AHEAD_PAPER_RESULTS_SSB}/${PATH_MINBFW_CONSUMPTION_BASENAME}.m"
+	export PATH_MINBFW_CONSUMPTION_DATAFILE="${AHEAD_PAPER_RESULTS_SSB}/${PATH_MINBFW_CONSUMPTION_BASENAME}.data"
+
+	# WARNING: If you want to change the following, make sure to change the respective occurrences throughout this project, e.g. in the CMakeLists.txt files
+	export AHEAD_RESTINY32_SUFFIX="_restiny32"
 
 	######################################################
 	# The following are the names of the scripts to call #
