--- a/common.conf
+++ b/common.conf
@@ -59,12 +59,19 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 	echo "${AHEAD_SCRIPT_ECHO_INDENT}Sourcing '${SOURCE_DIR_COMMON}/common.conf'"
 
 	######################################################
-	# The following are settings for the modular inverse #
+	# Settings for the SSB data generation               #
+	######################################################
+	SSB_DBGEN_SUBMODULE=ssb-dbgen
+	SSB_DBGEN_GITREPO=https://github.com/valco1994/ssb-dbgen
+	SSB_DBGEN_BUILDIR=build
+
+	######################################################
+	# Settings for the modular inverse                   #
 	######################################################
 	MI_SCRIPTFILE="modulo_inverse.m"
 
 	######################################################
-	# The following are settings for executing AHEAD     #
+	# Settings for executing AHEAD (SSB)                 #
 	######################################################
 	AHEAD_sub_begin
 	# Allow to externally set the AHEAD_DATE variable!
@@ -85,7 +92,7 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 	export AHEAD_SCALEFACTOR_PREFIX="sf-"
 	### The following must be overwritable for the minbfw experiments
 	[[ -z ${AHEAD_SCALEFACTOR_MIN+x} ]] && export AHEAD_SCALEFACTOR_MIN="1"
-	[[ -z ${AHEAD_SCALEFACTOR_MAX+x} ]] && export AHEAD_SCALEFACTOR_MAX="10"
+	[[ -z ${AHEAD_SCALEFACTOR_MAX+x} ]] && export AHEAD_SCALEFACTOR_MAX="3"
 
 	export AHEAD_BUILD_BASE_DIR="${SOURCE_DIR_COMMON}/build"
 	export AHEAD_BUILD_DEBUG_DIR="${AHEAD_BUILD_BASE_DIR}/Debug"
@@ -120,7 +127,7 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 	export AHEAD_RESTINY32_SUFFIX="_restiny32"
 
 	######################################################
-	# The following are the names of the scripts to call #
+	# Names of the scripts to call                       #
 	######################################################
 	export AHEAD_SCRIPT_BOOTSTRAP="${SOURCE_DIR_COMMON}/build_bootstrap.sh"
 	export AHEAD_SCRIPT_BLDSRC="${SOURCE_DIR_COMMON}/build_sources.sh"
