More fixes (hopefully the final ones), especially coding benchmark and modular inverse. Pretty printing
Signed-off-by: Till Kolditz <till.kolditz@gmail.com>

--- a/common.conf
+++ b/common.conf
@@ -25,7 +25,7 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 		local line
 		printf -v line '%*s' "$(( AHEAD_SCRIPT_COMMAND_DEPTH * 2 ))"
 		export AHEAD_SCRIPT_ECHO_INDENT=" ${line// / }* "
-		[[ ! -z ${MOREVERBOSE+x} ]] && echo "${AHEAD_SCRIPT_ECHO_INDENT}Depth=${AHEAD_SCRIPT_COMMAND_DEPTH}. Prefix='${AHEAD_SCRIPT_ECHO_INDENT}'"
+		[[ ! -z ${MOREVERBOSE+x} ]] && AHEAD_echo "Depth=${AHEAD_SCRIPT_COMMAND_DEPTH}. Prefix='${AHEAD_SCRIPT_ECHO_INDENT}'"
 		return 0
 	}
 	export -f AHEAD_sub_begin
@@ -36,7 +36,7 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 		local line
 		printf -v line '%*s' "$(( AHEAD_SCRIPT_COMMAND_DEPTH * 2 ))"
 		export AHEAD_SCRIPT_ECHO_INDENT=" ${line// / }* "
-		[[ ! -z ${MOREVERBOSE+x} ]] && echo "${AHEAD_SCRIPT_ECHO_INDENT}Depth=${AHEAD_SCRIPT_COMMAND_DEPTH}. Prefix='${AHEAD_SCRIPT_ECHO_INDENT}'"
+		[[ ! -z ${MOREVERBOSE+x} ]] && AHEAD_echo "Depth=${AHEAD_SCRIPT_COMMAND_DEPTH}. Prefix='${AHEAD_SCRIPT_ECHO_INDENT}'"
 		return 0
 	}
 	export -f AHEAD_sub_end
@@ -46,17 +46,35 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 		local line
 		printf -v line '%*s' "$(( AHEAD_SCRIPT_COMMAND_DEPTH * 2 ))"
 		export AHEAD_SCRIPT_ECHO_INDENT=" ${line// / }* "
-		[[ ! -z ${MOREVERBOSE+x} ]] && echo "${AHEAD_SCRIPT_ECHO_INDENT}Depth=${AHEAD_SCRIPT_COMMAND_DEPTH}. Prefix='${AHEAD_SCRIPT_ECHO_INDENT}'"
+		[[ ! -z ${MOREVERBOSE+x} ]] && AHEAD_echo "Depth=${AHEAD_SCRIPT_COMMAND_DEPTH}. Prefix='${AHEAD_SCRIPT_ECHO_INDENT}'"
 		return 0
 	}
 	export -f AHEAD_sub_reset
+
+	AHEAD_echo () {
+		local switches
+		(($# == 0)) && AHEAD_echo "Error! bash function 'AHEAD_echo' called with 0 arguments, but at least 1 expected (the target script or executable)!" && exit 1
+		if (($# > 1)); then
+			until (($# == 1)); do
+				arg=$1
+				if [[ ${arg:0:1} == "-" ]]; then
+					switches+=("${arg}")
+					shift
+				else
+					break
+				fi
+			done
+		fi
+		echo "${switches[@]}" "${AHEAD_SCRIPT_ECHO_INDENT}$@"
+	}
+	export -f AHEAD_echo
 
 	### "Initialize" pretty printing
 	AHEAD_sub_reset
 
 	export AHEAD_COMMON_CONF=""
 	SOURCE_DIR_COMMON="$(cd "$(dirname "${BASH_SOURCE[0]}")" >/dev/null && pwd )"
-	echo "${AHEAD_SCRIPT_ECHO_INDENT}Sourcing '${SOURCE_DIR_COMMON}/common.conf'"
+	AHEAD_echo "Sourcing '${SOURCE_DIR_COMMON}/common.conf'"
 
 	######################################################
 	# Settings for the SSB data generation               #
@@ -84,7 +102,7 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 		# fallback variant -- just assume VM...
 		AHEAD_IS_VM=1
 	fi
-	((AHEAD_IS_VM == 1)) && echo "${AHEAD_SCRIPT_ECHO_INDENT}detected VM"
+	((AHEAD_IS_VM == 1)) && AHEAD_echo "detected VM"
 	export AHEAD_PREVIOUS_DATE_FILE="${SOURCE_DIR_COMMON}/date.prev"
 	# Let's simply only enable PCM when not in a virtual machine, because the dependant code will not run therein anyways
 	export AHEAD_USE_PCM=$((AHEAD_IS_VM == 1 ? 0 : 1))
@@ -92,7 +110,7 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 	export AHEAD_SCALEFACTOR_PREFIX="sf-"
 	### The following must be overwritable for the minbfw experiments
 	[[ -z ${AHEAD_SCALEFACTOR_MIN+x} ]] && export AHEAD_SCALEFACTOR_MIN="1"
-	[[ -z ${AHEAD_SCALEFACTOR_MAX+x} ]] && export AHEAD_SCALEFACTOR_MAX="3"
+	[[ -z ${AHEAD_SCALEFACTOR_MAX+x} ]] && export AHEAD_SCALEFACTOR_MAX="5"
 
 	export AHEAD_BUILD_BASE_DIR="${SOURCE_DIR_COMMON}/build"
 	export AHEAD_BUILD_DEBUG_DIR="${AHEAD_BUILD_BASE_DIR}/Debug"
@@ -114,6 +132,7 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 	export AHEAD_PAPER_RESULTS="${AHEAD_PAPER_PATH}/results"
 	export AHEAD_PAPER_RESULTS_SSB="${AHEAD_PAPER_RESULTS}/ssb"
 	export AHEAD_PAPER_RESULTS_MB="${AHEAD_PAPER_RESULTS}/microbenchmarks"
+	export AHEAD_PAPER_RESULTS_CB="${AHEAD_PAPER_RESULTS}/microbenchmarks"
 	export AHEAD_PAPER_RESULTS_MI="${AHEAD_PAPER_RESULTS}/microbenchmarks/ext_euclidean"
 
 	export PATH_MINBFW_RUNTIME_BASENAME="minbfw_runtime"
@@ -122,6 +141,13 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 	export PATH_MINBFW_CONSUMPTION_BASENAME="minbfw_consumption"
 	export PATH_MINBFW_CONSUMPTION_GNUPLOTFILE="${AHEAD_PAPER_RESULTS_SSB}/${PATH_MINBFW_CONSUMPTION_BASENAME}.m"
 	export PATH_MINBFW_CONSUMPTION_DATAFILE="${AHEAD_PAPER_RESULTS_SSB}/${PATH_MINBFW_CONSUMPTION_BASENAME}.data"
+
+	export PATH_CODBENCH_ENCODE_GNUPLOTFILE="${AHEAD_PAPER_RESULTS_CB}/plot_encode_avx2.m"
+	export PATH_CODBENCH_CHECK_GNUPLOTFILE="${AHEAD_PAPER_RESULTS_CB}/plot_check_avx2.m"
+	export PATH_CODBENCH_DECODE_GNUPLOTFILE="${AHEAD_PAPER_RESULTS_CB}/plot_decode_avx2.m"
+	export PATH_CODBENCH_LABELS_GNUPLOTFILE="${AHEAD_PAPER_RESULTS_CB}/plot_labels.m"
+
+	export PATH_MODINV_GNUPLOTFILE="${AHEAD_PAPER_RESULTS_MI}/TestModuloInverseComputation2.m"
 
 	# WARNING: If you want to change the following, make sure to change the respective occurrences throughout this project, e.g. in the CMakeLists.txt files
 	export AHEAD_RESTINY32_SUFFIX="_restiny32"
@@ -143,8 +169,8 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 	# Function to encapsulate pushd verbosity.           #
 	######################################################
 	AHEAD_pushd () {
-		(($# != 1)) && echo "${AHEAD_SCRIPT_ECHO_INDENT}Error! bash function 'AHEAD_pushd' called with ${#@} arguments, but exactly 1 expected (the pushd target)!" && exit 1
-		[[ ! -z ${VERBOSE+x} ]] && { echo -n "${AHEAD_SCRIPT_ECHO_INDENT}pushd: "; pushd "$1"; } || pushd "$1" &>/dev/null
+		(($# != 1)) && AHEAD_echo "Error! bash function 'AHEAD_pushd' called with ${#@} arguments, but exactly 1 expected (the pushd target)!" && exit 1
+		[[ ! -z ${VERBOSE+x} ]] && { AHEAD_echo -n "pushd: "; pushd "$1"; } || pushd "$1" &>/dev/null
 	}
 	export -f AHEAD_pushd
 
@@ -152,8 +178,8 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 	# Function to encapsulate popd verbosity.            #
 	######################################################
 	AHEAD_popd () {
-		(($# != 0)) && echo "${AHEAD_SCRIPT_ECHO_INDENT}Error! bash function 'AHEAD_popd' called with ${#@} arguments, but exactly 0 expected!" && exit 1
-		[[ ! -z ${VERBOSE+x} ]] && { echo -n "${AHEAD_SCRIPT_ECHO_INDENT}popd: "; popd; } || popd &>/dev/null
+		(($# != 0)) && AHEAD_echo "Error! bash function 'AHEAD_popd' called with ${#@} arguments, but exactly 0 expected!" && exit 1
+		[[ ! -z ${VERBOSE+x} ]] && { AHEAD_echo -n "popd: "; popd; } || popd &>/dev/null
 	}
 	export -f AHEAD_popd
 
@@ -165,10 +191,10 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 	######################################################
 	AHEAD_sync () {
 		if ((AHEAD_IS_VM == 1)); then
-			echo -n "${AHEAD_SCRIPT_ECHO_INDENT}SYNCing files (VM mode)..." && sleep 2 && sync "$@" && sleep 2 && echo " Done."
+			AHEAD_echo -n "SYNCing files (VM mode)..." && sleep 2 && sync "$@" && sleep 2 && echo " Done.";
 		else
 			# Unfortunately, it seems that we must force some wait time even in non-VM mode!
-			echo -n "${AHEAD_SCRIPT_ECHO_INDENT}SYNCing files..." && sleep 1 && sync "$@" && echo " Done."
+			AHEAD_echo -n "SYNCing files..." && sleep 1 && sync "$@" && echo " Done."
 		fi
 	}
 	export -f AHEAD_sync
@@ -181,7 +207,8 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 	# with an "echo Error" or "echo Done".               #
 	######################################################
 	AHEAD_run_hidden_output () {
-		(($# == 0)) && echo "${AHEAD_SCRIPT_ECHO_INDENT}Error! bash function 'AHEAD_run_hidden_output' called with 0 arguments, but at least 1 expected (the target script or executable)!" && exit 1
+		local ret
+		(($# == 0)) && AHEAD_echo "Error! bash function 'AHEAD_run_hidden_output' called with 0 arguments, but at least 1 expected (the target script or executable)!" && exit 1
 		t=$(tempfile) || exit 1
 		trap "echo ' Error!'; cat '$t'; rm -f -- '$t'" EXIT
 		CMD="$1"
@@ -240,5 +267,5 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 	AHEAD_sub_end
 elif [[ ! -z ${VERBOSE+x} ]]; then
 	SOURCE_DIR_COMMON="$(cd "$(dirname "${BASH_SOURCE[0]}")" >/dev/null && pwd )"
-	echo "${AHEAD_SCRIPT_ECHO_INDENT}Already sourced '${SOURCE_DIR_COMMON}/common.conf'!"
+	AHEAD_echo "Already sourced '${SOURCE_DIR_COMMON}/common.conf'!"
 fi
