Fix SSB data generation: minbfw=4 was not properly handled Use "AHEAD_exit &?" instead of "exit 1"
Signed-off-by: Till Kolditz <till.kolditz@gmail.com>

--- a/common.conf
+++ b/common.conf
@@ -79,14 +79,9 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 	######################################################
 	# Settings for the SSB data generation               #
 	######################################################
-	SSB_DBGEN_SUBMODULE=ssb-dbgen
-	SSB_DBGEN_GITREPO=https://github.com/valco1994/ssb-dbgen
-	SSB_DBGEN_BUILDIR=build
-
-	######################################################
-	# Settings for the modular inverse                   #
-	######################################################
-	MI_SCRIPTFILE="modulo_inverse.m"
+	export SSB_DBGEN_SUBMODULE=ssb-dbgen
+	export SSB_DBGEN_GITREPO=https://github.com/valco1994/ssb-dbgen
+	export SSB_DBGEN_BUILDIR=build
 
 	######################################################
 	# Settings for executing AHEAD (SSB)                 #
