--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,4 @@ paper/results/ssb/intermediate
 /paper/results/ssb/minbfw_consumption.tex
 /paper/results/ssb/minbfw_runtime.pdf
 /paper/results/ssb/minbfw_runtime.tex
+/paper/results/microbenchmarks/ext_euclidean
