first try to find out whether the user has 'sudo' rights and only if this is the case, then try to set performance governor and disable turbo boost.
Signed-off-by: Till Kolditz <till.kolditz@gmail.com>

--- a/common.conf
+++ b/common.conf
@@ -232,29 +232,35 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 	# scalinggovernor.sh and turboboost.sh               #
 	######################################################
 	AHEAD_prepare_scalinggovernor_and_turboboost () {
-		if [[ -z ${reproscript+x} ]]; then
-			echo "###########################################################"
-			echo "# For the following tests, for better reproducibilty, we: #"
-			echo "#   * DISABLE turboboost                                  #"
-			echo "#   * set the OS scaling governor to PERFORMANCE          #"
-			echo "#                                                         #"
-			echo "# For that, you need a sudoer account!                    #"
-			echo "#                                                         #"
-			echo -n "#   * turboboost: "
-			sudo "${AHEAD_SCRIPT_TURBOBOOST}" disable &>/dev/null && echo "succeeded.                              #" || echo "failed.                                 #"
-			echo -n "#   * scaling governor: "
-			modes=($(sudo "${AHEAD_SCRIPT_GOVERNOR}" avail 0))
-			hasperformance=0
-			for mode in "${modes[@]}"; do
-				if [[ "${mode}" == performance ]]; then
-					hasperformance=1
-					sudo "${AHEAD_SCRIPT_GOVERNOR}" set performance && echo "succeeded.                        #" || echo "failed.                           #"
-					break
-				fi
-			done
-			[[ $hasperformance == 0 ]] && echo "failed. Did not find governor.    #"
-			echo "###########################################################"
-			echo
+		# first, try to find out whether the user has sudo rights.
+		# See e.g. https://superuser.com/questions/553932/how-to-check-if-i-have-sudo-access
+		sudo -v 2>/dev/null
+		ret=$?
+		if [[ $ret -eq 0 ]]; then
+			if [[ -z ${reproscript+x} ]]; then
+				echo "###########################################################"
+				echo "# For the following tests, for better reproducibilty, we: #"
+				echo "#   * DISABLE turboboost                                  #"
+				echo "#   * set the OS scaling governor to PERFORMANCE          #"
+				echo "#                                                         #"
+				echo "# For that, you need a sudoer account!                    #"
+				echo "#                                                         #"
+				echo -n "#   * turboboost: "
+				sudo "${AHEAD_SCRIPT_TURBOBOOST}" disable &>/dev/null && echo "succeeded.                              #" || echo "failed.                                 #"
+				echo -n "#   * scaling governor: "
+				modes=($(sudo "${AHEAD_SCRIPT_GOVERNOR}" avail 0))
+				hasperformance=0
+				for mode in "${modes[@]}"; do
+					if [[ "${mode}" == performance ]]; then
+						hasperformance=1
+						sudo "${AHEAD_SCRIPT_GOVERNOR}" set performance && echo "succeeded.                        #" || echo "failed.                           #"
+						break
+					fi
+				done
+				[[ $hasperformance == 0 ]] && echo "failed. Did not find governor.    #"
+				echo "###########################################################"
+				echo
+			fi
 		fi
 	}
 	export -f AHEAD_prepare_scalinggovernor_and_turboboost
